database/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quaranteam-db
  name: quaranteam-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quaranteam-db
  template:
    metadata:
      labels:
        app: quaranteam-db
    spec:
      containers:
      - name: quaranteam-db
        image: registry-jpe2.r-local.net/cc-tech-newgrad-h-quaranteam/mongo:5.0.8
        ports:
          - containerPort: 27017
        resources:
          limits:
            cpu: 800m
            memory: 800Mi
          requests:
            cpu: 500m
            memory: 600Mi
        securityContext:
          runAsUser: 101
        volumeMounts:
          - name: mongo-pv
            mountPath: /data/db
      serviceAccountName: tenant-pod-default
      automountServiceAccountToken: true # Istio sidecar needs to communicate with k8s API
      volumes:
        - name: mongo-pv
          persistentVolumeClaim:
            claimName: mongodb
