database/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quaranteam-db
  name: quaranteam-db
spec:
  ports:
    - name: tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: quaranteam-db
  type: ClusterIP
