database/deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quaranteam-db
spec:
  podSelector:
    matchLabels:
      app: quaranteam-db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
